--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "axios": "^0.19.2",
-    "qs": "^6.8.0",
+    "axios": "^0.21.1",
     "commander": "^2.20.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "qs": "^6.8.0"
   }
 }
