--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@adobe/aemcs-api-client-lib",
   "description": "AEM-CS API Client Library",
   "version": "0.0.1",
+  "scripts": {
+    "test": "jest"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/adobe/aemcs-api-client-lib"
@@ -17,6 +20,10 @@
     "axios": "^0.21.1",
     "commander": "^2.20.0",
     "jsonwebtoken": "^8.5.1",
+    "https-proxy-agent": "^7.0.2",
     "qs": "^6.8.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
